--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>OfficeAddinAADAuth2</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
